--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,8 +1,28 @@
 @import './base.css';
 
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+ul, li {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
 .container {
     max-width: 1170px;
     margin: 0 auto;
     padding-left: 20px;
     padding-right: 20px;
+}
+
+a {
+    text-decoration: none;
+    color: #0828fe;
+    transition: 0.5s;
+}
+
+a:hover {
+    color: #041dc2;
 }
