--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -10,6 +10,12 @@ ul, li {
     padding: 0;
 }
 
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
 .container {
     max-width: 1170px;
     margin: 0 auto;
@@ -19,10 +25,10 @@ ul, li {
 
 a {
     text-decoration: none;
-    color: #0828fe;
+    color: #ffffff;
     transition: 0.5s;
 }
 
 a:hover {
-    color: #041dc2;
+    color: #afafaf;
 }
