--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -23,6 +23,10 @@ ul, li {
     padding-right: 20px;
 }
 
+.page {
+    padding: 20px 0 40px;
+}
+
 a {
     text-decoration: none;
     color: #ffffff;
