--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -27,6 +27,12 @@ ul, li {
     padding: 20px 0 40px;
 }
 
+.page-header {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+}
+
 a {
     text-decoration: none;
     color: #ffffff;
