--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,6 +1,21 @@
-@import './base.css';
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+    margin: 0;
+    font-weight: normal;
+}
 
 body {
+    min-height: 100vh;
+    color: #242424;
+    background: #ffffff;
+    transition: color 0.5s, background-color 0.5s;
+    line-height: 1.6;
+    font-size: 15px;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
     font-family: Arial, Helvetica, sans-serif;
 }
 
