--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -9,7 +9,7 @@
 body {
     min-height: 100vh;
     color: #242424;
-    background: #ffffff;
+    background: #fff;
     transition: color 0.5s, background-color 0.5s;
     line-height: 1.6;
     font-size: 15px;
@@ -50,7 +50,7 @@ ul, li {
 
 a {
     text-decoration: none;
-    color: #ffffff;
+    color: #fff;
     transition: 0.5s;
 }
 
