added CRUD for filters and variables for colors

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -7,3 +7,15 @@ $black: #000;
 $light: #efefef;
 $dark: #242424;
 
+$gray: #7b7b7b;
+$gray-hover: #a3a3a3;
+$light-gray: #ececec;
+
+$purple: #3b48a1;
+$purple-hover: #1f275c;
+$red: red;
+$tomato: tomato;
+$green: green;
+$green-hover: rgb(1, 84, 1);
+$orange: orange;
+$orange-hover: rgb(181, 117, 0);
