optimized store, added loading animation

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -9,7 +9,7 @@ $dark: #242424;
 
 $gray: #7b7b7b;
 $gray-hover: #a3a3a3;
-$light-gray: #ececec;
+$gray-light: #ececec;
 
 $purple: #3b48a1;
 $purple-hover: #1f275c;
